# mongodb-getting-started

mongocxx/: CMakeLists.txt  README.md
mongocxx/include/: Person.hpp  PersonRepository.hpp  PersonRepositoryTests.hpp
mongocxx/src/: Person.cpp  PersonRepository.cpp  PersonRepositoryTests.cpp  main.cpp
